--- a/students/templates/students/all.html
+++ b/students/templates/students/all.html
@@ -53,13 +53,13 @@
 <div class="row">
     <div class="col-md-12 table-parent">
         <div class="table-responsive">
-            <table class="table" data-sorting="true">
+            <table class="table footable table-hover" data-sorting="true" data-expand-first="true">
               <thead>
                 <tr>
                   <th>Building</th>
                   <th>#</th>
                   <th>Type</th>
-                  <th data-type="number">Open Beds</th>
+                  <th data-type="number" data-breakpoints="xs">Open Beds</th>
                   <th data-breakpoints="xs">Gender</th>
                   <th data-breakpoints="xs sm">Pulls</th>
                   <th data-breakpoints="xs sm md">Notes</th>
