--- a/students/templates/students/header.html
+++ b/students/templates/students/header.html
@@ -4,24 +4,21 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-            </button>
+        </button>
         
         <!-- Site Name -->
-        <div class="navbar-header pull-left" style="padding-left: 5px;">
+        <div class="navbar-brand-div">
             <a class="navbar-brand navbar-site-name" href="{% url 'students-home' %}">
-                RoomService
+                ROOM<strong class="brand-bold">SERVICE</strong>
             </a>
          </div><!--/.navbar-header-->
         
-         <!-- Lottery Number - sticks to right hand side -->
-         <div class="navbar-header pull-right">
-            <ul class="nav pull-left">
-                <li class="navbar-text navbar-brand pull-left loto-num">
-                    {% if LotteryNumber %}
-                    Next #{{ LotteryNumber }}
-                    {% endif %} 
-                </li>
-            </ul>
-         </div><!--/.navbar-right-->
+         <ul class="nav pull-right">
+            <li class="navbar-text">
+                {% if LotteryNumber %}
+                Next #{{ LotteryNumber }}
+                {% endif %} 
+            </li>
+        </ul>
     </div><!--/.container-->
 </nav><!--/.navbar -->
