--- a/students/static/students/building/building-roomservice.css
+++ b/students/static/students/building/building-roomservice.css
@@ -151,13 +151,17 @@
     border-color: lightgray;
 }
 
+.filter-row {
+    margin-top: 10px;
+}
+
 .dropdown-toggle {
     border-radius: 0px;
     border: none;
 }
 
 .bootstrap-select {
-   margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .table-parent {
