--- a/students/templates/students/all.html
+++ b/students/templates/students/all.html
@@ -53,7 +53,7 @@
 <div class="row">
     <div class="col-md-12 table-parent">
         <div class="table-responsive">
-            <table class="table footable table-hover" data-sorting="true" data-expand-first="true">
+            <table class="table footable table-striped" data-expand-first="true">
               <thead>
                 <tr>
                   <th>Building</th>
