--- a/students/templates/students/building.html
+++ b/students/templates/students/building.html
@@ -159,39 +159,43 @@
                 <div id="rooms-pane" class="tab-pane fade in active">
             {% endif %}
           
-            <!-- filter by floor dropdown available if there are rooms left -->
-            {% if floors|length > 1 %}
-            <select id="floorFilter" class="selectpicker room-filter">
-                <option name="all" value="all">All Floors</option>
-                {% for floor in floors %}
-                    <option name="floor{{floor}}" value="floor{{floor}}">Floor {{floor}}</option>
-                {% endfor %}
-            </select>
-            {% endif %}
+            <div class="row filter-row">
+                <div class="col-lg-12">
+                    <!-- filter by floor dropdown available if there are rooms left -->
+                    {% if floors|length > 1 %}
+                    <select id="floorFilter" class="selectpicker room-filter">
+                        <option name="all" value="all">All Floors</option>
+                        {% for floor in floors %}
+                            <option name="floor{{floor}}" value="floor{{floor}}">Floor {{floor}}</option>
+                        {% endfor %}
+                    </select>
+                    {% endif %}
 
-            <!-- filter by room type dropdown available, if there are more than 1 type of room -->
-            {% if room_types|length > 1 %}
-            <select id="roomTypeFilter" class="selectpicker room-filter">
-                <option name="all" value="all">All Room Types</option>
-                {% for type in room_types %}
-                    <option name="type{{type}}" value="type{{type}}">
-                        {% if type == 'S' %}
-                            Single
-                        {% elif type == 'D' %}
-                            Double
-                        {% elif type == 'T' %}
-                            Triple
-                        {% elif type == 'Q' %}
-                            Quad
-                        {% elif type == 'B' %}
-                            Block
-                        {% endif %}
-                    </option>
-                {% endfor %}
-            </select>
-            {% endif %}
+                <!-- filter by room type dropdown available, if there are more than 1 type of room -->
+                {% if room_types|length > 1 %}
+                <select id="roomTypeFilter" class="selectpicker room-filter">
+                    <option name="all" value="all">All Room Types</option>
+                    {% for type in room_types %}
+                        <option name="type{{type}}" value="type{{type}}">
+                            {% if type == 'S' %}
+                                Single
+                            {% elif type == 'D' %}
+                                Double
+                            {% elif type == 'T' %}
+                                Triple
+                            {% elif type == 'Q' %}
+                                Quad
+                            {% elif type == 'B' %}
+                                Block
+                            {% endif %}
+                        </option>
+                    {% endfor %}
+                </select>
+                {% endif %}
+                </div>
+            </div>
 
-            <table class="table footable table-striped" data-sorting="true" data-expand-first="true" id="roomlist">
+            <table class="table footable table-striped" data-expand-first="true" id="roomlist">
                 <thead>
                     <tr>
                         <th>#</th>
@@ -248,7 +252,13 @@
                             {% endif %}
                         </td>
 
-                        <td{{room.notes}}</td>
+                        <td>
+                            {% if room.notes %}
+                                {{room.notes}}
+                            {% else %}
+                                --
+                            {% endif %}
+                        </td>
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -287,7 +297,7 @@
                 </p>
                 {% endwith %}
 
-                 <table class="table footable table-striped" data-sorting="true" data-expand-first="true">
+                 <table class="table footable table-striped" data-expand-first="true">
                     <thead>
                         <tr>
                             <th>#</th>
@@ -345,7 +355,11 @@
                                 </td>
 
                                 <td>
-                                    {{room.notes}}
+                                    {% if room.notes %}
+                                        {{room.notes}}
+                                    {% else %}
+                                        --
+                                    {% endif %}
                                 </td>
                             </tr>
                         {% endfor %}
