--- a/students/templates/students/building.html
+++ b/students/templates/students/building.html
@@ -2,13 +2,21 @@
 
 {% block title %}{{ current_building.name }}{% endblock title %}
 
-{% block custom-css %} 
+{% block custom-css %}
     <!-- Custom styles for this template -->
     <link href="/static/students/building_dashboard/dashboard.css" rel="stylesheet">
-      
+
     <!-- CSS for nice select menus for Floor -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/css/bootstrap-select.min.css">
-      
+
+    <!-- CSS for imageviewer -->
+    <link href="/static/students/ImageViewer/imageviewer.css"
+          rel="stylesheet">
+
+    <!-- Floorplan css -->
+    <link href="/static/students/ImageViewer/floorplangallery.css"
+          rel="stylesheet">
+
     <!-- CSS for this page -->
     <link rel="stylesheet" href="/static/students/building/building.css">
 {% endblock %}
@@ -25,7 +33,7 @@
                 </small>
         </h1>
         <div class="row building-stats">
-                  
+
             <!-- Types of Rooms -->
             <div class="col-md-6">
                 <div class="panel panel-default">
@@ -48,7 +56,7 @@
                     </div>
                </div>
             </div>
-                  
+
             <!-- Building Notes -->
             {% if current_building.notes %}
              <div class="col-md-6">
@@ -67,7 +75,8 @@
             <!-- Link to floor plan images if small screen -->
             <div class="col-md-6 hidden-md hidden-lg">
                <a href="#floorPlans" class="nodecor" id="floorPlanViewButton">
-                   <div class="panel panel-green panel-default nodecor">
+                   <div class='sticky-anchor'></div>
+                   <div class="panel panel-green panel-default nodecor floorPlanViewButton sticky">
                        <div class="stat-panel-heading-green nodecor">
                            <h3 class="panel-title-green nodecor" id="floorPlanViewText"><span class="glyphicon glyphicon-picture" aria-hidden="true"></span> View Floor Plans <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></h3>
                         </div>
@@ -78,14 +87,17 @@
 
           </div><!--/row-->
       </div><!--/container-fluid-->
-          
+      <!-- End of Header Panels -->
+
       <!-- first half of page - room list -->
+
       {% if floor_images %}
       <div class="col-md-6 col-xs-12">
       {% else %}
       <div class="col-md-12">
       {% endif %}
-      
+
+    <div class="container-fluid">
       <!-- filter by floor dropdown available if there are rooms left -->
        {% if floors|length > 1 %}
         <select id="floorFilter" class="selectpicker room-filter">
@@ -117,7 +129,7 @@
             {% endfor %}
         </select>
         {% endif %}
-          
+
         <!-- table of all open rooms -->
         {% if rooms %}
         <div class="table-responsive">
@@ -146,9 +158,9 @@
                     'rooms_by_floor': {'101': <Room object 101>, '10': [<Room 102>, <Room 110>, <Room 152>]}
                     -->
                 {% endcomment %}
-                  
+
                 {% for roomNum, apt_rooms in rooms.items %}
-    
+
                     <!-- An apartment dropdown -->
                     {% with first_room=apt_rooms|first %}
                     {% if first_room.apartment %}
@@ -158,7 +170,7 @@
                             <td><strong>{{apt.number}}</strong></td>
                             <td><strong>Apartment</strong></td>
                             <td>{{apt.available_beds}}</td>
-                            
+
                             <!-- Show Gender -->
                             {% if show_gender %}
                             <td>
@@ -169,21 +181,21 @@
                                 {% endif %}
                             </td>
                             {% endif %}
-                              
+
                             <!-- Show Pull (none on an apartment) -->
                             {% if show_pull %}
                             <td></td>
                             {% endif %}
-                            
+
                             <!-- Show Notes -->
                             {% if show_notes %}
                             <td>
                                 {{apt.notes}}
                             </td>
                             {% endif %}
-                            
+
                         </tr>
-                  
+
                         <!-- Apartment rooms -->
                         {% for rm in apt_rooms %}
                             <tr name="{{rm}}" class="apt-room" style="display: none;">
@@ -210,7 +222,7 @@
                                 <td>
                                     {{rm.available_beds}}
                                 </td>
-                                
+
                                 <!-- Show Gender -->
                                 {% if show_gender %}
                                 <td>
@@ -221,7 +233,7 @@
                                     {% endif %}
                                 </td>
                                 {% endif %}
-                                
+
                                 <!-- Show Pull -->
                                 {% if show_pull %}
                                 <td>
@@ -230,25 +242,25 @@
                                     {% endif %}
                                 </td>
                                 {% endif %}
-                                
+
                                 <!-- Show Notes -->
                                 {% if show_notes %}
                                 <td>
                                     {{rm.notes}}
                                 </td>
                                 {% endif %}
-                                
+
                             </tr>
                         {% endfor %}
                         {% endwith %}
-                  
+
                         <!-- Regular room -->
                         {% else %}
                             {% for rm in apt_rooms %}
                             <tr name="{{rm}}" class="floor{{rm.floor}} type{{rm.room_type}} table-dropdown">
                                 <td></td>
                                 <td>{{rm.number}}</td>
-                                
+
                                 <!-- Room Type -->
                                 <td>
                                 {% with type=rm.room_type %}
@@ -269,9 +281,9 @@
                                 {% endif %}
                                 {% endwith %}
                                 </td>
-                            
+
                                 <td>{{rm.available_beds}}</td>
-                                
+
                                 <!-- Show Gender -->
                                 {% if show_gender %}
                                     <td>
@@ -282,7 +294,7 @@
                                     {% endif %}
                                     </td>
                                 {% endif %}
-                                
+
                                 <!-- Show Pull -->
                                 {% if show_pull %}
                                     <td>
@@ -291,7 +303,7 @@
                                     {% endif %}
                                     </td>
                                 {% endif %}
-                                
+
                                 <!-- Show Notes -->
                                 {% if show_notes %}
                                     <td>
@@ -305,73 +317,79 @@
                 {% endfor %}
               </tbody>
             </table>
-          </div><!--table of rooms-->   
-          
+          </div><!--table of rooms-->
+
           <!-- if there are no rooms -->
           {% else %}
             <h3>There are currently no available rooms</h3>
           {% endif %}
-          
+
     </div><!--/first half of screen-->
-          
+   </div><!--end of Room Table and filters -->
+
     <!-- horizontal line visible on smaller screens to divide floor plans and open room list -->
+
     {% if floor_images %}
-    <div class="hidden-lg hidden-md col-md-12"><hr></div>
-    {% endif %}
-        
-    <!-- second half of screen (floor plans) -->
-    {% if floor_images %}
-    <a name="floorPlans"></a>
+<!--    <div class="hidden-lg hidden-md col-md-12"><hr></div>-->
     <div class="col-md-6 col-xs-12">
-        
-        <!-- large floor image -->
-        {% with first_image=floor_images|first %}
-            <h2 id="floorPlanName">{{ first_image.display_name }}</h2>
-        
-            <!-- floor plan image -->
-            <img id="fullFloorPlan" class="img-responsive floor-plan-img" src="{{first_image.image.url}}" data-zoom-image="{{first_image.image.url}}"/>
-        {% endwith %}
-        
-        <!-- floor plan thumbnail links -->
-        <div class="row">
-            {% for floorplan in floor_images %}
-                <div class="col-xs-3 col-md-3 thumb-div" id="thumbnail-gallery">
-                    {% if forloop.first %}
-                    <a class="active thumbnail" data-image="{{floorplan.image.url}}" data-zoom-image="{{floorplan.image.url}}">
-                    {% else %}
-                    <a class="thumbnail" data-image="{{floorplan.image.url}}" data-zoom-image="{{floorplan.image.url}}">
-                    {% endif %}
-                        <img src="{{floorplan.image.url}}" class="floorplan-thumbnail" alt="{{floorplan.display_name}}" id="thumb{{forloop.counter0}}"/>
-                        <div class="caption thumbnail-label">
-                            {{floorplan.display_name}}
-                        </div>
-                    </a>
-                </div>
-            {% endfor %}
-        </div>
-    </div><!--/floor plans-->
+
+    {% with first_image=floor_images|first %}
+    <div class="floorplans container-fluid">
+        <a name="floorPlans"></a>
+        <h1 id="floor-name" class="panel-title">{{first_image.display_name}}</h1>
+
+
+        <img src="{{first_image.image.url}}"
+             class="pannable-image img-responsive floor-plan-img">
+
+    {% endwith %}
+
+    <div class="row thumbnails">
+        {% for floorplan in floor_images %}
+            <div class="col-xs-3 col-md-3 thumb-div" id="thumbnail-gallery">
+                {% if forloop.first %}
+                <a class="active thumbnail" data-image="{{floorplan.image.url}}" data-zoom-image="{{floorplan.image.url}}">
+                {% else %}
+                <a class="thumbnail" data-image="{{floorplan.image.url}}" data-zoom-image="{{floorplan.image.url}}">
+                {% endif %}
+                    <img src="{{floorplan.image.url}}" class="floorplan-thumbnail" alt="{{floorplan.display_name}}" id="thumb{{forloop.counter0}}"/>
+                    <div class="caption thumbnail-label">
+                        {{floorplan.display_name}}
+                    </div>
+                </a>
+            </div>
+        {% endfor %}
+    </div>
+    </div>
+    </div>
     {% endif %}
+
+
     </div><!--/row-offcanvas -->
 
 {% endblock content %}
-          
+
 {% block custom-js %}
     <!-- Zoom JQuery Plugin -->
-    <script src="/static/students/assets/js/zoom/jquery.elevateZoom-3.0.8.min.js" type="text/javascript"></script>
-          
+<!--    <script src="/static/students/assets/js/zoom/jquery.elevateZoom-3.0.8.min.js" type="text/javascript"></script>-->
+
     <!-- Script for floor plan inner zoom -->
-    <script src="/static/students/building/zoom.js" type="text/javascript"></script> 
-          
+<!--    <script src="/static/students/building/zoom.js" type="text/javascript"></script> -->
+
     <!-- Bootstrap Select plugin for filtering by floor -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/js/bootstrap-select.min.js"></script>
     <script src="/static/students/building/filters.js" type="text/javascript"></script>
-          
+
     <!-- Script for floor plan thumbnail click function -->
     <script src="/static/students/building/thumbnail.js" type="text/javascript"></script>
-          
+
+    <!-- Script for ImageViewer -->
+    <script src="/static/students/ImageViewer/imageviewer.min.js"></script>
+    <script src="/static/students/ImageViewer/floorplanviewer.js"></script>
+
     <!-- Script for dropdown apartments -->
     <script src="/static/students/building/dropdown-table.js" type="text/javascript"></script>
-          
+
     <!-- Script for filtering building sidebar -->
     <script src="/static/students/sidebar/sidebar-filter.js" type="text/javascript"></script>
 {% endblock custom-js %}
