updated css for the footer

--- a/students/templates/students/footer.html
+++ b/students/templates/students/footer.html
@@ -6,7 +6,7 @@
           <!-- can insert hyper links here -->
       </div>
       <div class="col-md-12">
-        <p class="muted pull-left">Hamilton College Computer Science</p>
+        <p class="muted pull-left footer-text" >Hamilton College Computer Science</p>
       </div>
     </div>
   </div>
