--- a/staff/templates/staff/edit/edit.html
+++ b/staff/templates/staff/edit/edit.html
@@ -43,7 +43,7 @@
 
             <div class="row">
                   <div class="col-md-6">
-                      <a href="{% url 'edit-room' %}" class="nodecor">
+                      <a href="{% url 'edit-room-select' %}" class="nodecor">
                         <div class="landing-panel panel">
                             <div class="landing-panel-heading">
                                 <h3 class="landing-panel-title">Edit a room</h3>
